--- a/04 - Model Selection.slides.html
+++ b/04 - Model Selection.slides.html
@@ -14669,7 +14669,7 @@ div.jp-OutputPrompt {
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Lecture-4:-Model-Selection">Lecture 4: Model Selection<a class="anchor-link" href="#Lecture-4:-Model-Selection">&#182;</a></h1><p><strong>Can I trust you?</strong></p>
-<p>Joaquin Vanschoren</p>
+<p>Ahmed Alansari</p>
 
 </div>
 </div>
