--- a/02 - Linear Models.slides.html
+++ b/02 - Linear Models.slides.html
@@ -14669,7 +14669,7 @@ div.jp-OutputPrompt {
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Lecture-2:-Linear-models">Lecture 2: Linear models<a class="anchor-link" href="#Lecture-2:-Linear-models">&#182;</a></h1><p><strong>Basics of modeling, optimization, and regularization</strong></p>
-<p>Joaquin Vanschoren</p>
+<p>Ahmed Alansari</p>
 
 </div>
 </div>
