--- a/03 - Kernelization.slides.html
+++ b/03 - Kernelization.slides.html
@@ -14669,7 +14669,7 @@ div.jp-OutputPrompt {
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Lecture-3:-Kernelization">Lecture 3: Kernelization<a class="anchor-link" href="#Lecture-3:-Kernelization">&#182;</a></h1><p><strong>Making linear models non-linear</strong></p>
-<p>Joaquin Vanschoren</p>
+<p>Ahmed Alansari</p>
 
 </div>
 </div>
