--- a/05 - Ensemble Learning.slides.html
+++ b/05 - Ensemble Learning.slides.html
@@ -14669,7 +14669,7 @@ div.jp-OutputPrompt {
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Lecture-5.-Ensemble-Learning">Lecture 5. Ensemble Learning<a class="anchor-link" href="#Lecture-5.-Ensemble-Learning">&#182;</a></h1><p><strong>Crowd intelligence</strong></p>
-<p>Joaquin Vanschoren</p>
+<p>Ahmed Alansari</p>
 
 </div>
 </div>
