--- a/06 - Data Preprocessing.slides.html
+++ b/06 - Data Preprocessing.slides.html
@@ -14665,7 +14665,7 @@ div.jp-OutputPrompt {
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Lecture-6.-Data-preprocessing">Lecture 6. Data preprocessing<a class="anchor-link" href="#Lecture-6.-Data-preprocessing">&#182;</a></h1><p><strong>Real-world machine learning pipelines</strong></p>
-<p>Joaquin Vanschoren</p>
+<p>Ahmed Alansari</p>
 
 </div>
 </div>
