--- a/08 - Neural Networks.slides.html
+++ b/08 - Neural Networks.slides.html
@@ -14669,7 +14669,7 @@ div.jp-OutputPrompt {
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Lecture-8.-Neural-Networks">Lecture 8. Neural Networks<a class="anchor-link" href="#Lecture-8.-Neural-Networks">&#182;</a></h1><p><strong>How to train your neurons</strong></p>
-<p>Joaquin Vanschoren</p>
+<p>Ahmed Alansari</p>
 
 </div>
 </div>
