--- a/10 - Neural Networks for text.slides.html
+++ b/10 - Neural Networks for text.slides.html
@@ -14659,7 +14659,7 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Lecture-10.-Neural-Networks-for-text">Lecture 10. Neural Networks for text<a class="anchor-link" href="#Lecture-10.-Neural-Networks-for-text">&#182;</a></h1><p><strong>Turning text into numbers</strong></p>
-<p>Joaquin Vanschoren</p>
+<p>Ahmed Alansari</p>
 
 </div>
 </div>
